sumo/tests/traci/VariableRetrieval/Polygon/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Sat Oct  9 00:29:36 2010


-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=168 varID=255 objID=dummy
.. Answered with error to command (168), [description: Get Polygon Variable: unsupported variable specified]

-> Command sent: <SimulationStep2>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
